--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,13 @@
 		<link rel=stylesheet href=styles/main.css>
 	</head>
 
-	<body>
-
+	<body class=fullbleed>
+		<div>
+			<h1>Pocketistic</h1>
+			<h3> How big are your pockets? </h3>
+		</div>
 		<!-- bower:js -->
 		<!-- endbower -->
-		<script src=scripts/main.min.js></script>
+		<script src=scripts/main.js></script>
 	</body>
 </html>
